Peningkatan versi ke 7.0.1-SNAPSHOT dan perbaikan kompatibilitas dengan Java 11